# git-rust

./: .gitignore  Cargo.toml  Makefile  README.md  config.dev.toml  config.test.toml  config_test.toml
db/: branches.txt  commits.txt  current_branch.txt
src/: lib.rs  main.rs  settings.rs
src/applications/: branches_application_service.rs  commits_application_service.rs  mod.rs
src/domain/: blob_file.rs  branch.rs  branch_handler.rs  branches_repository.rs  command_handler.rs  commit.rs  commit_handler.rs  commits_repository.rs  current_branch_repository.rs  files_repository.rs  mod.rs  tree.rs  tree_handler.rs  tree_repository.rs
src/infrastructure/primary/: cli_branches.rs  cli_commit.rs  command.rs  command_handler.rs  commands.rs  mod.rs
src/infrastructure/secondary/: branch_entity.rs  branches_repository_file.rs  commit_entity.rs  db_branches_repository.rs  db_commits_repository.rs  db_current_branch_repository.rs  db_files_repository.rs  db_tree_repository.rs  mod.rs
tests/: branch_entity_test.rs  branch_fixtures.rs  branch_handler.rs  branch_handler_test.rs  branch_test.rs  cli_branch_test.rs  cli_commit_test.rs  commit_entity_test.rs  commit_fixtures.rs  commit_handler_test.rs  commit_test.rs  db_branches_repository_test.rs  db_commits_repository_test.rs  db_current_branch_repository_test.rs  db_files_repository_test.rs  db_tree_repository_test.rs  file_shared.rs  git_rust_steps.rs  mod.rs  tree_fixtures.rs  tree_test.rs
tests/db/: branches_test.txt  commits_test.txt
