[package]
name = "git-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
uuid = { version = "1.15.1", features = ["v4"] }
sha1 = "0.11.0-pre.5"
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
config = { version = "0.15.11" }

[dev-dependencies]
mockall = "0.13.1"